[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project_utils"
version = "0.1.0"
description = "Reusable convenience functions for multiple projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0"
]

[tools.setuptools]
pacakge-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]
